# cwp-verify

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  run.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: development.yaml
antlr/: Expr.g4  State.g4
original/BPMN-Generate/: LongScaling.py  WideScaling.py
original/BPMN_Visitor/: BPMN_Visitor.py
original/CSVIngest/: CSVIngestor.py
original/CWP/: CWP.py
original/CounterExampleParser/: CounterExampleParser.py
original/CounterExampleVisualize/: BPMNETModifier.py  CWPETModifier.py
original/StateIngest/: ActivityModifiesIngest.py  StateIngestor.py
original/Util/: chromium-browser  genCounterExampleImage.sh  test.sh
original/bpmn/: BPMN.py
original/main/: main.py
scripts/docker-interface/: Dockerfile  launch_verify.sh  verify.sh
scripts/example-runners/: regenerate_scaling_examples.sh  run_all_examples.sh  run_parallel_scaling_examples.sh  run_premade_examples.sh  run_sequential_scaling_examples.sh
src/BPMN-Generate/: LongScaling.py  WideScaling.py
src/BPMN_Visitor/: BPMN_Visitor.py
src/CWP/: CWP.py
src/CWP-Generate/: WideScaling.py
src/CounterExampleParser/: CounterExampleParser.py
src/CounterExampleVisualize/: BPMNETModifier.py  CWPETModifier.py  CounterExampleXMLGenerator.py
src/ExpressionParse/: ExpressionParser.py
src/PromelaGeneration/: LTL_gen.py  Promela_gen_visitor.py  Stub_gen_visitor.py
src/StateIngest/: ActivityModifiesIngest.py  StateIngestor.py
src/Util/: chromium-browser  genCounterExampleImage.sh  test.sh  verify.sh
src/XMLIngest/: BPMNXMLIngestor.py  CWPXMLIngestor.py
src/bpmn/: BPMN.py
src/bpmncwpverify/: BPMN.py  bpmn.py  cli.py  constants.py  cwp.py  error.py  expr.py  graph_viz_visitor.py  promela_gen_visitor.py  state.py  typechecking.py  utils.py  visitors.py
src/bpmncwpverify/antlr/: Expr.interp  Expr.tokens  ExprLexer.interp  ExprLexer.py  ExprLexer.tokens  ExprListener.py  ExprParser.py  State.interp  State.tokens  StateLexer.interp  StateLexer.py  StateLexer.tokens  StateListener.py  StateParser.py
src/bpmncwpverify/bpmn/: BPMN.py  bpmn_visitor.py
src/bpmncwpverify/builder/: bpmn_builder.py  cwp_builder.py  process_builder.py
src/bpmncwpverify/core/: bpmn.py  bpmnmethods.py  cwp.py  cwpmethods.py  error.py  expr.py  promcreate.py  (+3 more)
src/cli/: main.py
src/main/: main.py
test/: test_bpmn.py  test_bpmn_cwp.py  test_cli.py  test_cwp.py  test_error.py  test_expr_parser.py  test_state.py  test_typechecking.py  test_xml_ingest.py
test/BPMN-Generate/: LongScaling.py  WideScaling.py
test/CSVIngest/: CSVIngestor.py
test/CWP-Generate/: CWPWideScaling.py
test/builder/: test_bpmn_builder.py  test_cwp_builder.py  test_process_builder.py
test/core/: test_bpmn.py  test_bpmn_cwp.py  test_cwp.py  test_expr.py  test_expr_interface.py  test_expr_parser.py  test_promcreate.py  test_state.py  test_typechecking.py
test/example/: negotiation_state.txt  negotiation_workflow.bpmn
test/resources/: bad_state.txt  behavior.txt  cwp.xml  state.txt  test_bpmn.bpmn  test_cwp.xml  valid_output.pml  workflow.bpmn
test/visitors/: test_bpmn_connectivity_visitor.py  test_bpmn_promela_visitor.py  test_cwp_connectivity_visitor.py  test_cwp_ltl_visitor.py  test_process_connectivity_visitor.py
(+26 files in other folders)
