[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bpmn-cwp-verify"
description = "A tool to verify that workflow implements a cognitive work problem"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=2.2.2",
  "returns",
  "antlr4-python3-runtime",
]

[project.scripts]
verify = "bpmncwpverify.cli:verify"
generate-stubs = "bpmncwpverify.cli:generate_stubs"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.4",
  "returns[compatible-mypy]",
  "pre-commit",
  "nitpick",
  "antlr4-tools",
  ]

[tool.ruff]
target-version = "py312"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/mypy.toml"


[tool.mypy]
exclude = [
  "^src/bpmncwpverify/antlr",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "antlr.*",
    "bpmncwpverify.antlr.*",
]
ignore_missing_imports = true
